Feat: Estilos seccion referencias

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@ Selector{
 @import "section-aboutme.css";
 @import "section-projects.css";
 @import "section-blog.css";
+@import "section-references.css";
 
 * {
     margin: 0;
